[package]
name = "K2Rmini"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5"
libc = "0.2"
needletail = "0.6"
simd-minimizers = "2.2"
regex = "1.11"
rustc-hash = "2.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 1
lto = "thin"
