[package]
name = "K2Rmini"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5"
libc = "0.2"
helicase = { git = "https://github.com/imartayan/helicase.git", features = [
    "packed-seq",
] }
simd-minimizers = "2.3"
regex = "1.12"
rustc-hash = "2.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 1
lto = "thin"
